# gomoku

./: .gitignore  .ocamlformat  Dockerfile  Makefile  README.md  app.ml  app.mli  board-fail  dune  dune-project  esy.json  fly.toml  gomoku.opam  package-lock.json  package.json  watch.sh
.github/workflows/: cd.yml  main.yml
esy.lock/: index.json
lib/: dune  gomoku.ml  gomoku.mli
test/: dune  gomoku_test.ml
